--- a/mycentos/Vagrantfile
+++ b/mycentos/Vagrantfile
@@ -56,7 +56,7 @@ Vagrant.configure("2") do |config|
 
    # Customize the amount of memory on the VM:
     vb.memory = 8192
-    vb.cpus = 2  
+    vb.cpus = 4  
   end
   #
   # View the documentation for the provider you are using for more
@@ -67,11 +67,12 @@ Vagrant.configure("2") do |config|
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
      sudo groupadd docker 
-     sudo usermod -aG docker vagrant 
-     sudo yum install docker -y 
+     sudo usermod -aG docker ${USER} 
+     sudo yum install git epel-release docker ansible dnsmasq wget -y 
      sudo sed -i --follow-symlinks 's/^SELINUX=.*/SELINUX=disabled/g' /etc/sysconfig/selinux && cat /etc/sysconfig/selinux
      sudo systemctl enable docker 
      sudo systemctl start docker
+     sudo sed -i --follow-symlinks 's/^SELINUX=.*/SELINUX=enforcing/g' /etc/sysconfig/selinux && cat /etc/sysconfig/selinux
      sudo reboot -h now
   SHELL
 end
