--- a/mycentos/Vagrantfile
+++ b/mycentos/Vagrantfile
@@ -67,12 +67,12 @@ Vagrant.configure("2") do |config|
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
      sudo groupadd docker 
-     sudo usermod -aG docker ${USER} 
+     sudo usermod -aG docker vagrant 
      sudo yum install git epel-release docker ansible dnsmasq wget -y 
-     sudo sed -i --follow-symlinks 's/^SELINUX=.*/SELINUX=disabled/g' /etc/sysconfig/selinux && cat /etc/sysconfig/selinux
+     # sudo sed -i --follow-symlinks 's/^SELINUX=.*/SELINUX=disabled/g' /etc/sysconfig/selinux && cat /etc/sysconfig/selinux
      sudo systemctl enable docker 
      sudo systemctl start docker
-     sudo sed -i --follow-symlinks 's/^SELINUX=.*/SELINUX=enforcing/g' /etc/sysconfig/selinux && cat /etc/sysconfig/selinux
-     sudo reboot -h now
+     # sudo sed -i --follow-symlinks 's/^SELINUX=.*/SELINUX=enforcing/g' /etc/sysconfig/selinux && cat /etc/sysconfig/selinux
+     # sudo reboot -h now
   SHELL
 end
