--- a/okdcentos/Vagrantfile
+++ b/okdcentos/Vagrantfile
@@ -122,5 +122,5 @@ Vagrant.configure("2") do |config|
     sudo mv oc kubectl  /usr/local/bin/
 
   SHELL
-  config.vm.provision :shell, path: "bootstrap.sh"  
+  # config.vm.provision :shell, path: "bootstrap.sh"  
 end
