--- a/docs-src/mkdocs.yml
+++ b/docs-src/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
         # php: php.md
         python flask: python.md
         # swift: swift.md
-    - Deploy a OKD local cluster in centos: okd.md
+    - Deploy a OKD 3.11 in centos: okd.md
     - About: about.md
 # theme: readthedocs
 theme:
