--- a/k8s/httpbin.yaml
+++ b/k8s/httpbin.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: js-httpbin-service
-  namespace: js-demo-ns
+  namespace: user09
 spec:
   selector:
     app: js-httpbin-app
@@ -16,7 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: js-httpbin-deployment
-  namespace: js-demo-ns
+  namespace: user09
   labels:
     app: js-httpbin-app
 spec:
@@ -42,7 +42,7 @@ spec:
           value: "3000"
         - name: TARGET_URI
           value: /delay/1
-        image: mycluster.icp:8500/js-demo-ns/js-httpbin:2.0
+        image: mycluster.icp:8500/user09/js-nodeapp:1.0
         imagePullPolicy: Always
         name: js-httpbin-app
         ports:
