--- a/okdcentos/Vagrantfile
+++ b/okdcentos/Vagrantfile
@@ -6,6 +6,14 @@
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
 Vagrant.configure("2") do |config|
+
+  # set auto_update to false, if you do NOT want to check the correct 
+  # additions version when booting this machine
+  config.vbguest.auto_update = true
+
+  # do NOT download the iso file from a webserver
+  config.vbguest.no_remote = false
+
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
@@ -71,10 +79,11 @@ Vagrant.configure("2") do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
+
+    sudo yum update -y
+
     sudo groupadd docker 
     sudo usermod -aG docker vagrant
-
-    sudo yum -y update
 
     sudo yum install git epel-release ansible pyOpenSSL python-cryptography python-lxml docker -y
     sudo yum install wget -y
