--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
    "workbench.colorCustomizations": {
       "activityBar.background": "#2264f1",
+      "activityBar.activeBorder": "#f787ab",
       "activityBar.foreground": "#e7e7e7",
       "activityBar.inactiveForeground": "#e7e7e799",
       "activityBarBadge.background": "#f787ab",
